--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.5
+  line_icons: ^2.0.1
+  web3dart: ^2.4.1
+
+  walletika_sdk:
+    git:
+      url: https://github.com/Walletika/walletika-sdk.git
+      ref: main
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +71,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - assets/logos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
