--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
   get: ^4.6.5
+  get_storage: ^2.0.3
+  awesome_dialog: ^3.0.2
   line_icons: ^2.0.1
   url_launcher: ^6.1.6
-  get_storage: ^2.0.3
   walletika_sdk:
     git:
       url: https://github.com/Walletika/walletika-sdk.git
