--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   pinput: ^2.2.16
   line_icons: ^2.0.1
   url_launcher: ^6.1.6
+  qr_flutter: ^4.0.0
+  walletika_creator:
+    git:
+      url: https://github.com/Walletika/walletika-creator.git
+      ref: main
   walletika_sdk:
     git:
       url: https://github.com/Walletika/walletika-sdk.git
