--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   get: ^4.6.5
   get_storage: ^2.0.3
+  path_provider: ^2.0.11
   url_launcher: ^6.1.7
   cached_network_image: ^3.2.3
   walletika_sdk:
