--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   pinput: 2.2.16
   line_icons: 2.0.1
   qr_flutter: 4.0.0
+  file_picker: 5.2.4
 
 dev_dependencies:
   flutter_test:
