--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   line_icons: 2.0.1
   qr_flutter: 4.0.0
   file_picker: 5.2.4
+  window_manager: 0.2.8
 
 dev_dependencies:
   flutter_test:
